# cve_arro_server

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLEANUP.md  Containerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
_arrowspace_index/example_data--matrix/: meta.json
_arrowspace_index/example_data--matrix/data.zarr/c/: 0
_arrowspace_index/example_data--matrix/indices.zarr/: zarr.json
_arrowspace_index/example_data--matrix/indices.zarr/c/: 0
_arrowspace_index/example_data--matrix/indptr.zarr/: zarr.json
_arrowspace_index/example_data--matrix/indptr.zarr/c/: 0
_arrowspace_index/main/: meta.json
_arrowspace_index/main/data.zarr/: zarr.json
_arrowspace_index/main/data.zarr/c/: 0
_arrowspace_index/main/indices.zarr/: zarr.json
_arrowspace_index/main/indices.zarr/c/: 0
_arrowspace_index/main/indptr.zarr/: zarr.json
_arrowspace_index/main/indptr.zarr/c/: 0
arrowspace_index/main--matrix/: meta.json
arrowspace_index/main--matrix/data.zarr/: zarr.json
arrowspace_index/main--matrix/data.zarr/c/: 0
arrowspace_index/main--matrix/indptr.zarr/: zarr.json
arrowspace_index/main--matrix/indptr.zarr/c/: 0
data/: README.md
frontend/: app.js  drift.html  index.html  styles.css
notebooks/: arrowspace_tuning.db  cve.ipynb  cve_drift_monitoring.ipynb  cve_spectral_drift.ipynb  search_engine_demo.ipynb
notebooks/demos/: db_setup.ipynb  demo.ipynb  demo_01.ipynb  demo_02.ipynb  demo_03.ipynb  demo_embs_def.ipynb
notebooks/embeddings_val/: embeddings_full_benchmark.ipynb
notebooks/embeddings_val/output/: eval_agreement.csv  eval_headk_sweep.csv  eval_per_query.csv  eval_summary.csv
notebooks/results/arrowspace_tuner/20260512_092232/: best_params.json  trials.csv
notebooks/results/arrowspace_tuner/20260514_125028/: best_params.json  trials.csv
notebooks/results/arrowspace_tuner/20260514_173751/: best_params.json  trials.csv
output_prompt_nomic768/: prompt_comparison_metrics.csv  prompt_headk_sweep.csv  prompt_query_emb_nomic768.npy  prompt_run_metadata.json  prompt_search_results.csv  prompt_semantic_recall_metrics.csv  prompt_summary.csv  prompt_tail_metrics.csv
scripts/: build_cve_corpus.py  compute_drift.py  convert_npy_to_zzarr.py  generate_query_embeddings.py  make_example_data.py  nomic_corpus_embs.py  process_json.py
scripts/embeddings_ablation/: prompt_benchmark.py  prompt_benchmark_nomic768.py
scripts/embeddings_ablation/embs/: get_embeddings_01.py  get_embeddings_02.py  get_embeddings_03.py  get_embeddings_04.py  get_embeddings_05.py  get_embeddings_06.py  get_embeddings_nomic.py  get_embeddings_nomic01.py  get_query_emb_nomic01.py  get_query_emb_nomic02.py
src/arro_server/: __init__.py  __main__.py  app.py  arrowspace_adapter.py  drift_engine.py  embedder.py  errors.py  search_engine.py  settings.py  slicing.py
src/arro_server/api/: __init__.py  routes.py  schemas.py  serializers.py
src/arro_server/storage/: __init__.py  base.py  registry.py  zarr_fs.py
src/arrospace_server/: arrowspace_adapter.py  settings.py
src/arrospace_server/api/: routes.py
tests/: conftest.py  test_api.py  test_arrowspace_adapter.py  test_phase1_arrowspace.py  test_prompt_search.py  test_serializers.py  test_settings.py  test_slicing.py
