[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "arro-server"
version = "0.1.0"
description = "FastAPI server for serving Zarr v3 datasets with ArrowSpace graph-Laplacian index"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Genefold / ArrowSpace contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
zarr = ["zarr>=3.0", "fsspec>=2024.2"]
arrow = ["pyarrow>=15.0"]
# pip install arrowspace  (repo: https://github.com/tuned-org-uk/pyarrowspace)
arrowspace = ["arrowspace"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "zarr>=3.0",
    "fsspec>=2024.2",
    "numpy>=1.26",
]

[project.scripts]
arro-server = "arrospace_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arrospace_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
